[gd_scene load_steps=2 format=3 uid="uid://b2numvphf2kau"]

[ext_resource type="Script" path="res://scenes/OptionsMenu/Video/VideoOptionsMenu.gd" id="1"]

[node name="VideoOptionsMenu" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1
script = ExtResource("1")

[node name="FullscreenControl" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="FullscreenLabel" type="Label" parent="FullscreenControl"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fullscreen :"
horizontal_alignment = 1

[node name="FullscreenButton" type="CheckButton" parent="FullscreenControl"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2

[node name="ResolutionControl" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 1

[node name="ResolutionLabel" type="Label" parent="ResolutionControl"]
layout_mode = 2
size_flags_horizontal = 3
text = "Resolution :"
horizontal_alignment = 1

[node name="ResolutionOptions" type="OptionButton" parent="ResolutionControl"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="toggled" from="FullscreenControl/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="item_selected" from="ResolutionControl/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
